--- a/YourChat.xcodeproj/xcshareddata/xcschemes/YourChat.xcscheme
+++ b/YourChat.xcodeproj/xcshareddata/xcschemes/YourChat.xcscheme
@@ -34,6 +34,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = "en_GB"
+      region = "GB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
